k8s/deployment-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth
        image: anasofir/bookstore-auth:latest  # Usa tu imagen real
        ports:
        - containerPort: 5000
