k8s/deployment-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
      - name: catalog
        image: anasofir/bookstore-catalog:latest
        ports:
        - containerPort: 5001
