k8s/service-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: ClusterIP
